# thermocas9

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANUSCRIPT.md  PAPER.md  README.md  V2_5_REVIEW.md  pyproject.toml
config/: pam_model.yaml
examples/: auc_uncertainty.md  auc_uncertainty.tsv  auc_uncertainty_1e6.md  auc_uncertainty_1e6.tsv  bench_surrogate_differential_loose_v25.jsonl  bench_surrogate_differential_tight_v25.jsonl  bench_surrogate_differential_v1_loose.jsonl  bench_surrogate_differential_v1_tight.jsonl  delta_beta_only_auc_sweep.md  delta_beta_only_auc_sweep.tsv  delta_beta_z_baseline.md  delta_beta_z_baseline.tsv  delta_sensitivity_sweep.md  delta_sensitivity_sweep.tsv  evidence_class_distribution.md  evidence_class_distribution.tsv  evidence_class_stratified_benchmark.md  evidence_class_stratified_benchmark.tsv  factor_ablation_vs_sigmoid.md  factor_ablation_vs_sigmoid.tsv  feature_matched_negative_controls.md  feature_matched_negative_controls.tsv  genome_wide_panel.md  genome_wide_panel.tsv  gse322563_native_wg_gating.md  gse322563_native_wg_gating.tsv  gse322563_wg_gating.md  gse322563_wg_gating.tsv  gse69914_wg_gating.md  gse69914_wg_gating.tsv  gse69914_wg_gating_delta_0_1.md  gse69914_wg_gating_delta_0_1.tsv  gse77348_wg_gating.md  gse77348_wg_gating.tsv  limma_cross_cohort_panel.md  limma_cross_cohort_panel.tsv  limma_gse322563_hm450_wg.md  limma_gse322563_hm450_wg.tsv  limma_gse322563_native_wg.md  limma_gse322563_native_wg.tsv  (+29 more)
prereg/: 2026-04-24-hek-hct-system-b-transport-addendum.md  2026-04-24-hek-hct-system-b.md
scripts/: annotate_top_hits.py  auc_uncertainty.py  build_atlas_dotplot.py  limma_ebayes.py  (+40 more)
(+245 files in other folders)
