[project]
name = "thermocas"
version = "0.4.0"
description = "Methylome-guided framework for ThermoCas9 target-site discovery and prioritization"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Allison Huang", email = "allisonhmercer@gmail.com" },
]
keywords = [
    "thermocas9",
    "crispr",
    "methylation",
    "cancer-genomics",
    "target-discovery",
    "computational-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
thermocas = "thermocas.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thermocas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# Greek letters and math operators are scientific-notation convention throughout
# (sigma, alpha, multiplication sign, minus sign, en-dash). Ignore the ambiguous-
# unicode rules rather than strip the math from docstrings, comments, and
# Field descriptions.
ignore = ["RUF001", "RUF002", "RUF003"]
